Opt-out repo at policy level
Signed-off-by: lelia <le1ia@me.com>

--- a/branch_protection.yaml
+++ b/branch_protection.yaml
@@ -2,4 +2,6 @@ optConfig:
   optOutStrategy: true
   # TODO: Review policy
   optOutPrivateRepos: true
+  optOutRepos:
+    - device-tco-calculator
 action: issue
